--- a/Task-list/index.html
+++ b/Task-list/index.html
@@ -9,6 +9,22 @@
     <title>Task_List</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h4>Task list</h4>
+        <form id="task_form">
+            <input type="text" id="new_task" placeholder="New Task">
+          <input type="submit" value="Add Task">
+        </form>
+        <hr>
+        <h4>Tasks</h4>
+        <input type="text" id="task_filter" placeholder="Filter Task">
+        <ul id="task_list">
+
+        </ul>
+        <button id="clear_task_btn">Clear Tasks</button>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
