All Complited BookList Progect

--- a/Book_list/index.html
+++ b/Book_list/index.html
@@ -1,52 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-      integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <title>Book List</title>
-  </head>
-  <body>
-    <div class="container">
-      <h3>Add Book</h3>
-      <form id="book_form">
-        <div>
-          <label for="title">Title</label>
-          <input type="text" name="" id="title" class="u-full-width" />
-        </div>
-        <div>
-          <label for="author">Author</label>
-          <input type="text" name="" id="author" class="u-full-width" />
-        </div>
-        <div>
-          <label for="isbn">ISBN#</label>
-          <input type="text" name="" id="isbn" class="u-full-width" />
-        </div>
-        <div>
-          <input type="submit" value="Submit" class="u-full-width" />
-        </div>
-      </form>
-      <table class="u-full-width">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>ISBN#</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody id="book_list"></tbody>
-      </table>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+    integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Book List</title>
 
-    <script src="script.js"></script>
-  </body>
+  <style>
+    .delete{
+      text-decoration: none;
+    }
+    .fa-xmark{
+      font-size: 25px;
+      font-weight: 900;
+      cursor: pointer;
+    }
+
+    .success,.error{
+      color: white;
+      padding: 5px;
+      margin: 5px;   
+     }
+     .success{
+      background: green;
+     }
+     .error{
+      background: red;
+     }
+     .fa-book{
+      color: rgb(167, 187, 187);
+     }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h3>Add <i class="fa-solid fa-book"></i> Book</h3>
+    <form id="book_form">
+      <div>
+        <label for="title">Title</label>
+        <input type="text" name="" id="title" class="u-full-width" />
+      </div>
+      <div>
+        <label for="author">Author</label>
+        <input type="text" name="" id="author" class="u-full-width" />
+      </div>
+      <div>
+        <label for="isbn">ISBN#</label>
+        <input type="text" name="" id="isbn" class="u-full-width" />
+      </div>
+      <div>
+        <input type="submit" value="Submit" class="u-full-width" />
+      </div>
+    </form>
+    <table class="u-full-width">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>ISBN#</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody id="book_list"></tbody>
+    </table>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
